# book-source-40-recipes

./: CMakeLists.txt  msgq_recv.c  msgq_send.c  mysql_delete.c  mysql_display.c  mysql_insert.c  mysql_search.c  mysql_update.c  pipe.c  pipe_read.c  pipe_write.c  shm_read.c  shm_write.c  tcp_client.c  tcp_server.c  udp_client.c  udp_server.c
